# TextAdventure

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ConsoleHack.code-workspace  Makefile
config/: data.xml  data.xsd
data/: verbs.txt
main/: main.cpp
main/data/: Entity.h  Location.cpp  Location.h
main/interaction/: Action.cpp  Action.h  Vocabulary.h
main/main/: GameState.h  ReturnCode.h
src/: main.cpp
src/config/: ConfigParser.cpp  ConfigParser.h
src/core/: GameState.h  GlobalError.h  ReturnCode.h  stringutils.h
src/data/: DataError.h  Direction.h  Entity.h  Item.h  Location.cpp  Location.h
src/interaction/: Action.cpp  Action.h  ActionPerformer.cpp  ActionPerformer.h  ActionRC.h  InteractionError.h  Verb.h  VocabRC.h  Vocabulary.cpp  Vocabulary.h
src/main/: GameState.h
test/: test-main.cpp
test/GTest/: gmock-gtest-all.cpp  gmock.h
test/UnitTests/: ActionPerformer_Test.cpp  Location_Test.cpp  Vocabulary_Test.cpp
